Adding Security Context on Manifests

--- a/manifests/deploy-session.yaml
+++ b/manifests/deploy-session.yaml
@@ -16,9 +16,12 @@ spec:
       containers:
       - name: microservice-session
         #change the image name
-        image: journeycode/microservice-session
+        image: gbaufake/microservice-session
         ports:
           - containerPort: 9080
+      securityContext:
+          privileged: true
+          runAsUser: 1001
 
 ---
 apiVersion: v1
