--- a/manifests/deploy-schedule.yaml
+++ b/manifests/deploy-schedule.yaml
@@ -16,9 +16,12 @@ spec:
       containers:
       - name: microservice-schedule
         #change the image name
-        image: journeycode/microservice-schedule
+        image: gbaufake/microservice-schedule
         ports:
           - containerPort: 9080
+      securityContext:
+          privileged: true
+          runAsUser: 1001  
 ---
 apiVersion: v1
 kind: Service
