--- a/manifests/deploy-vote.yaml
+++ b/manifests/deploy-vote.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - name: microservice-vote
         #change this image name
-        image: journeycode/microservice-vote-cloudant
+        image: gbaufake/microservice-vote-cloudant
         imagePullPolicy: Always
         env:
         - name: dbUsername
@@ -29,7 +29,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: cloudant-secret
-              key: dbPassword 
+              key: dbPassword
         - name: dbHost
           value: $CLOUDANT_SERVICE_SERVICE_HOST
         - name: dbPort
@@ -38,6 +38,9 @@ spec:
         args: ["if [ ! -z $dbPassword ]; then export dbUrl=http://$CLOUDANT_SERVICE_SERVICE_HOST:$CLOUDANT_SERVICE_SERVICE_PORT; exec /opt/ibm/wlp/bin/server run defaultServer; fi;"]
         ports:
           - containerPort: 9080
+      securityContext:
+          privileged: true
+          runAsUser: 1001
 
 ---
 apiVersion: v1
