--- a/manifests/deploy-webapp.yaml
+++ b/manifests/deploy-webapp.yaml
@@ -16,9 +16,12 @@ spec:
       containers:
       - name: microservice-webapp
         #change the image name
-        image: journeycode/microservice-webapp
+        image: gbaufake/microservice-webapp
         ports:
           - containerPort: 9080
+      securityContext:
+          privileged: true
+          runAsUser: 1001
 ---
 apiVersion: v1
 kind: Service
